--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Hello, World</h1>
     <p>Call me Shubham</p>
+    <img src="images/breaching_whale.jpg" alt="whale">
 
 </body>
 
