--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <h1>About</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro nesciunt in doloremque praesentium
-        <strong>officia!</strong>
+        <strong>official!</strong>
     </p>
 
 </body>
