--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Hello, World</h1>
+    <a href="about.html">About this Project</a>
     <p>Call me Shubham</p>
     <img src="images/breaching_whale.jpg" alt="whale">
 
