--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>About</h1>
+    <a href="https://docs.github.com/en">Git Docs</a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro nesciunt in doloremque praesentium
         <strong>official!</strong>
     </p>
