Add attribution in image link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hello, World</h1>
     <a href="about.html">About this Project</a>
     <p>Call me Shubham</p>
-    <img src="images/breaching_whale.jpg" alt="whale">
+    <img src="images/breaching_whale.jpg" alt="Big Blue whale">
 
 </body>
 
