Changed title About us

--- a/about.html
+++ b/about.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-    <h1>About</h1>
-    <a href="https://docs.github.com/en">Git Docs</a>
+    <h1>About Us</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro nesciunt in doloremque praesentium
         <strong>official!</strong>
     </p>
