--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h1>Hello, World</h1>
     <a href="about.html">About this Project</a>
     <p>Call me Shubham</p>
-    <img src="images/breaching_whale.jpg" alt="Big Blue whale">
+    <a href="https://www.flickr.com/photos/28883788@N04/10097824543"><img src="images/breaching_whale.jpg" alt="Big Blue whale">
+    </a>
+    
 
 </body>
 
