--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro nesciunt in doloremque praesentium
         <strong>official!</strong>
     </p>
+    <img src="images/polar_bear.jpg" alt="" srcset="">
 
 </body>
 
