Add an alt attrib name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hello, World</h1>
     <a href="about.html">About this Project</a>
     <p>Call me Shubham</p>
-    <a href="https://www.flickr.com/photos/28883788@N04/10097824543"><img src="images/breaching_whale.jpg" alt="Big Blue whale">
+    <a href="https://www.flickr.com/photos/28883788@N04/10097824543"><img src="images/breaching_whale.jpg" alt="Whale">
     </a>
     
 
