message:  "Add attrib link"

--- a/about.html
+++ b/about.html
@@ -12,6 +12,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro nesciunt in doloremque praesentium
         <strong>official!</strong>
     </p>
+    <a href="https://learnenough.s3-us-west-2.amazonaws.com/polar_bear.jpg"></a>
+
     <img src="images/polar_bear.jpg" alt="" srcset="">
 
 </body>
