--- a/about.html
+++ b/about.html
@@ -12,9 +12,11 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro nesciunt in doloremque praesentium
         <strong>official!</strong>
     </p>
-    <a href="https://learnenough.s3-us-west-2.amazonaws.com/polar_bear.jpg"></a>
+    <a href="https://learnenough.s3-us-west-2.amazonaws.com/polar_bear.jpg">
+        <img src="images/polar_bear.jpg" alt="Polar Bear" srcset="">
+    </a>
 
-    <img src="images/polar_bear.jpg" alt="" srcset="">
+    
 
 </body>
 
